[project]
name = "oracle-yt"
version = "0.1.0"
description = "Chat with Your Database: Natural Language to SQL using Oracle 26ai Select AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "oracledb>=3.4.2",
    "faker>=25.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "rich>=14.0.0",
    "tabulate>=0.9.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipywidgets>=8.1.0",
]
